--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,14 +11,22 @@ dependencies:
   flutter:
     sdk: flutter
 
+  go_router: ^6.0.9
+
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+
+
   flutter_lints: ^2.0.0
 
 flutter:
 
   uses-material-design: true
+
+  assets:
+    - lib/shared/assets/
+    - lib/shared/assets/images/
