--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,10 @@ dependencies:
     sdk: flutter
 
   go_router: ^6.0.9
+  simple_shadow: ^0.3.1
+  blur: ^3.1.0
+  intl: ^0.17.0
+  flutter_screenutil: ^5.6.1
 
   cupertino_icons: ^1.0.2
 
@@ -28,5 +32,5 @@ flutter:
   uses-material-design: true
 
   assets:
-    - lib/shared/assets/
-    - lib/shared/assets/images/
+    - assets/
+    - assets/images/
