--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_screenutil: ^5.6.1
 
   cupertino_icons: ^1.0.2
+  fluttericon: ^2.0.0
 
 dev_dependencies:
   flutter_test:
