--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,19 @@ dependencies:
   blur: ^3.1.0
   intl: ^0.17.0
   flutter_screenutil: ^5.6.1
+  webview_flutter: ^2.0.13
+  bloc: ^8.0.2
+  firebase_core:
+  firebase_auth:
+  equatable:
+  flutter_bloc:
+  google_sign_in:
+  email_validator:
+
 
   cupertino_icons: ^1.0.2
   fluttericon: ^2.0.0
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
