--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   fluttericon: ^2.0.0
   flutter_spinkit: ^5.1.0
+  blurrycontainer: ^1.0.2
 
 dev_dependencies:
   flutter_test:
