--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   google_sign_in:
   email_validator:
   curved_navigation_bar: ^1.0.3
+  firebase_core_platform_interface:
+  meta: ^1.8.0
 
 
   cupertino_icons: ^1.0.2
@@ -35,8 +37,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-
+  firebase_auth_platform_interface: ^6.10.4
 
   flutter_lints: ^2.0.0
 
